contrast fix

--- a/personal_site_MAIN/styles.css
+++ b/personal_site_MAIN/styles.css
@@ -22,6 +22,7 @@ nav {
 }
 
 nav a {
+    color: black;
     text-decoration: none;
     font-size: 20px;
     padding: 25px;
@@ -36,7 +37,7 @@ nav a:hover {
 header {
     display: grid;
     grid-template-columns: 50px auto;
-    background-color: black;
+    background-color: grey;
     font-family: "Host Grotesk";
 }
 
